fit_predictor/cvrp_pomo/evaluates/run4/2025-01-25_21-30-28/coevolve/generation_2/stdout_0.txt
Traceback (most recent call last):
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo_2\problems\cvrp_pomo\CVRPModel.py", line 8, in <module>
    from gpt import heuristics_v2 as heuristics
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo_2\problems\cvrp_pomo\gpt.py", line 6
    cumulative_d demands.cumsum(dim=0)
                 ^^^^^^^
SyntaxError: invalid syntax

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo_2/problems/cvrp_pomo/eval.py", line 26, in <module>
    from CVRPTester import CVRPTester as Tester
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo_2\problems\cvrp_pomo\CVRPTester.py", line 8, in <module>
    from CVRPModel import CVRPModel as Model
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo_2\problems\cvrp_pomo\CVRPModel.py", line 10, in <module>
    from gpt import heuristics
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo_2\problems\cvrp_pomo\gpt.py", line 6
    cumulative_d demands.cumsum(dim=0)
                 ^^^^^^^
SyntaxError: invalid syntax
